Allow users to register multiple sip uris with a limit (#420)
* [#409] Allow users to register multiple sip uris

* [#409] Fixing glitch on widget lists

* [MISC] Putting back missing title

* [MISC] Adding Amount of SIP URIs allowed in User Profile

--- a/views/account/edit.jade
+++ b/views/account/edit.jade
@@ -41,4 +41,7 @@ block content
                   .form-group
                     label.control-label Email address
                     input.form-control(type="text" ng-model="account.email" disabled)
+                  .form-group.hidden
+                    label.control-label Amount of SIP URIs allowed
+                    input.form-control(type="text" ng-model="account.sip_uris_limit" disabled)
                   button.btn.btn-default#save(ng-disabled="editProfile.$invalid" ng-click="saveProfile(account)") Save Profile
