--- a/views/sip/new.jade
+++ b/views/sip/new.jade
@@ -28,8 +28,8 @@ block content
     .header
       .container
         h1 Add a new SIP address
-        p Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time. You can always return to change your SIP URI.
-        p Don't have a SIP URI? You can skip this for now or enter ours: timeivr@sip1vox.voxbone.com.
+        p Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time but you can request for an upgrade.
+        p Don't have a SIP URI? You can skip this for now
 
         .row
           if currentUser.showWizard()
