--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -88,8 +88,7 @@ block content
                           label
                             input(type='checkbox' name='show_branding' ng-model='widget.show_branding')
                             span.radio-name Show branding
-                            a(href="mailto:workshop@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Removing%20Branding" target='_blank')
-                              span.badge(data-toggle='tooltip' data-placement="right" title="Toggles Voxbone branding from button and popup. Click to contact us to have this removed") ?
+                            span.badge(data-toggle='tooltip' data-placement="right" title="Toggles Voxbone branding from button and popup") ?
 
               span.title Call Configuration
               form#widget_form(name="widget_form", novalidate)
