[#391] Add a customize color button (#422)
* Added custom button, no style yet

* Changed .BoxPanel padding

* Applied color styling

* Added theme text

* Task finished

* Fixed Theme Glitch, repositioned pick frame color, kept custom preferences in front-end

* Fixed Custom Color frame bug

* Updated edit and demo tabs

* Fixed line 121

* Updated div snippet

* Task Finished

--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -4,6 +4,7 @@
   data-redirect_url=the_widget.link_button_to_a_page || undefined
   data-did="#{did}"
   data-custom_button_color=the_widget.button_color || undefined
+  data-custom_frame_color=the_widget.frame_color || undefined
   data-context=the_widget.context || undefined
   data-send_digits=the_widget.send_digits || undefined
   data-caller_id=the_widget.caller_id || undefined
