--- a/views/widget/preview_widget.jade
+++ b/views/widget/preview_widget.jade
@@ -58,6 +58,7 @@ ul.nav.nav-tabs(ng-cloak)
       .widget-box#launch_call_div(
           ng-cloak class="{{widget.button_style}}"
           ng-class="{'no-frame': !widget.show_frame, 'no-branding': !widget.show_branding}"
+          ng-style="{'background': widget.frame_color}"
           ng-show="showCallButton()"
         )
         button.btn-style.launch_call#launch_call_preview(
