--- a/views/voxbone_widget_iframe.jade
+++ b/views/voxbone_widget_iframe.jade
@@ -216,7 +216,9 @@ html(lang='en', ng-app="voxboneApp")
             !{the_widget.show_text_html}
         .widget-box(class="#{ the_widget.button_style || 'style-b' }" ng-show="showCallButton()")
           button.btn-style#launch_call(ng-click="makeCall()") #[span #{ the_widget.button_label || 'Call Now!' }]
-          .widget-footer-left
-            a(href="https://test.webrtc.org/" target="_blank") Test your setup
-          .widget-footer-right
-            a(href="https://voxbone.com" target="_blank") powered by:
+          if(the_widget.test_setup)
+            .widget-footer-left
+              a(href="https://test.webrtc.org/" target="_blank") Test your setup
+          if(the_widget.show_branding)
+            .widget-footer-right
+              a(href="https://voxbone.com" target="_blank") powered by:
