--- a/views/account/edit.jade
+++ b/views/account/edit.jade
@@ -39,6 +39,9 @@ block content
                     label.control-label Company
                     input.form-control(type="text" id="company" name="company" ng-model="account.company")
                   .form-group
+                    label.control-label Phone Number (optional)
+                    input.form-control(type="text" id="phone" name="phone" ng-model="account.phone")
+                  .form-group
                     label.control-label Email address
                     input.form-control(type="text" ng-model="account.email" disabled)
                   .form-group.hidden
