--- a/views/social-buttons.jade
+++ b/views/social-buttons.jade
@@ -1,4 +1,7 @@
 p.social-buttons
+  a.hidden.btn.btn-lg.btn-default(href="/auth/voxbone")
+    span.fa.fa-phone
+      Voxbone
   a.btn.btn-lg.btn-default(href="/auth/google")
     span.fa.fa-google-plus
       Google
