[#450] Added voxbone oauth button (#455)
* Added voxbone oauth button

* Fixes in social-buttons.jade

* Redesigned buttons to optionB

* added loginPage less file

* Cleaned up styles

* New line EOF

--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -35,6 +35,7 @@ Main Css
 @import "less/addNewModal";
 @import "less/addSip";
 @import "less/landingPage";
+@import "less/loginPage";
 
 
 /* Widget Style */
