--- a/views/login.jade
+++ b/views/login.jade
@@ -32,10 +32,10 @@ block content
 
             #form_container
               p.
-                #[b Note for current Voxbone customers:] your Click2Vox login will not be linked to your existing Voxbone account. We encourage you to create a separate account here for testing purposes. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                #[b Note for current Voxbone customers: ]  you can login with your Voxbone portal account. The WebRTC widgets and services created on click2vox.com are indepedant of your Voxbone account, DIDs, and trunk configuration. To add WebRTC to an existing DID, please view our instructions #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") here]
 
               .formWrap
-                h4.text-center Login with Google, Github, Windows Live or LinkedIn
+                h4.text-center Login with:
                 include social-buttons
 
                 h4.text-center or enter your details below
