--- a/views/social-buttons.jade
+++ b/views/social-buttons.jade
@@ -1,16 +1,27 @@
 p.social-buttons
-  a.hidden.btn.btn-lg.btn-default(href="/auth/voxbone")
-    span.fa.fa-phone
+  a.btn.btn-lg.btn-default.login-btn.vxb-button(href="/auth/voxbone")
+    img(src="images/voxbone-x.png" width="25px" height="25px")
+    span
       Voxbone
-  a.btn.btn-lg.btn-default(href="/auth/google")
+    br
+    span.btn-txt Voxbone
+  a.btn.btn-lg.btn-default.google-button.login-btn(href="/auth/google")
     span.fa.fa-google-plus
       Google
-  a.btn.btn-lg.btn-default(href="/auth/github")
+    br
+    span.btn-txt Google
+  a.btn.btn-lg.btn-default.git-button.login-btn(href="/auth/github")
     span.fa.fa-github
       Github
-  a.btn.btn-lg.btn-default(href="/auth/windowslive")
+    br
+    span.btn-txt Github
+  a.btn.btn-lg.btn-default.live-button(href="/auth/windowslive")
     span.fa.fa-windows
       WindowsLive
-  a.btn.btn-lg.btn-default(href="/auth/linkedin")
+    br
+    span.btn-txt Live
+  a.btn.btn-lg.btn-default.login-btn.LI-button(href="/auth/linkedin")
     span.fa.fa-linkedin
       LinkedIn
+    br
+    span.btn-txt LinkedIn
