[MISC] Fixes voxbone logo on oAuth section

--- a/views/social-buttons.jade
+++ b/views/social-buttons.jade
@@ -1,6 +1,6 @@
 p.social-buttons
   a.btn.btn-lg.btn-default.login-btn.vxb-button(href="/auth/voxbone")
-    img(src="images/voxbone-x.png" width="25px" height="25px")
+    img(src="/images/voxbone-x.png" width="25px" height="25px")
     span
       Voxbone
     br
