--- a/views/layout.jade
+++ b/views/layout.jade
@@ -57,7 +57,7 @@ html(lang='en')
     footer
       .container
         .col-xs-12.text-center#bottom-footer
-          a(target="_blank" href="https://www.voxbone.com/resources/Voxbone_AUP.pdf") Acceptable Use Policy
+          a(target="_blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
           a(href="/known-issues") Known Issues
           a(href="/faq") FAQ
