--- a/public/stylesheets/less_ui/pages/_register.less
+++ b/public/stylesheets/less_ui/pages/_register.less
@@ -33,7 +33,7 @@
   }
 
   form {
-    margin-top: 30px;
+    margin-top: 20px;
     
     label {
       margin-bottom: 2px;
@@ -44,5 +44,50 @@
       margin-top: 30px;
       margin-bottom: 30px;
     }     
+  }
+
+  .sub-header {
+    text-align: center;
+    font-size: 1.200em;
+    font-weight: normal;
+  }
+}
+
+
+
+.oauth-wrap {
+  text-align: center;
+  font-weight: normal;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  
+  h4 {
+    margin-bottom: 10px;
+  }  
+  
+  a {
+    font-size: 0.8em;
+    display: inline-block;
+    width: 55px;
+    height: 55px;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    background: @color-purple;
+    border-color: @color-purple;
+    color: @color-white;
+    border-radius: 6px;    
+    
+    &:hover {
+      background: darken(@color-purple, 5%);
+      text-decoration: none;
+      color: @color-white;
+    }
+    
+    .fa {
+      font-size: 25px;
+    }    
   }
 }
