edit button page

--- a/public/stylesheets/less_ui/main/_colors.less
+++ b/public/stylesheets/less_ui/main/_colors.less
@@ -5,6 +5,8 @@
 @color-mid-grey:    #787878;
 @color-light-grey:  #cccccc;
 
+@font-color:        #55595c;
+
 @nav-color:         rgba(64,62,57,.7);
 @nav-border:        #080808;
 
