--- a/public/stylesheets/less_ui/modules/_buttons.less
+++ b/public/stylesheets/less_ui/modules/_buttons.less
@@ -37,7 +37,7 @@
 
 .btn-purple{
   background-color: @color-purple;
-  border-color: @color-purple;
+  border:1px solid @color-purple;
   color: @color-white;
   
   &:hover {
