--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -4,13 +4,16 @@ Google Web Fonts
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i';
 @import 'https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i';
 
+/* ================================================
+Font Awesome
+================================================ */
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';
 
 /* ================================================
 Plugin Css
 ================================================ */
 /* Bootstrap */
 @import "less_ui/plugins/bootstrap-flex.css";
-
 
 /* ================================================
 Main Css
@@ -25,14 +28,18 @@ Main Css
 @import "less_ui/modules/_header";   
 @import "less_ui/modules/_footer";   
 @import "less_ui/modules/_buttons";
+@import "less_ui/modules/_tool-tip";
 @import "less_ui/modules/_modal";
+@import "less_ui/modules/_panel";
 
 /* App Sections */
 @import "less_ui/pages/_register";    
 @import "less_ui/pages/_home";    
 @import "less_ui/pages/_sip";    
+@import "less_ui/pages/_button-page";    
 
 /* Widget Style */
+@import "widget.css";
 
 /* Responsive Style */
 @import "less_ui/modules/_responsive";
