--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -1,486 +1,1 @@
-/* ================================================
-Google Web Fonts
-================================================ */
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i';
-@import 'https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i';
-/* ================================================
-Font Awesome
-================================================ */
-@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';
-/* ================================================
-Plugin Css
-================================================ */
-/* Bootstrap */
-@import "less_ui/plugins/bootstrap-flex.css";
-/* ================================================
-Main Css
-================================================ */
-/* Main Css Codes */
-@import "widget.css";
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.text-left {
-  text-align: left;
-}
-html,
-body {
-  min-height: 100vh;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-  font-weight: 300;
-  color: #55595c;
-}
-.container {
-  width: 100%;
-}
-.site-wrapper {
-  background-color: #207fbf;
-}
-.site-wrapper-inner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  min-height: 100vh;
-  padding-top: 150px;
-  padding-bottom: 50px;
-}
-/* Modules */
-.navbar-inverse {
-  background: rgba(64, 62, 57, 0.7);
-  border-bottom: 1px solid #080808;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-.navbar-inverse .navbar-nav > li > a {
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 56px;
-  text-decoration: none;
-  font-weight: normal;
-}
-.navbar-inverse .navbar-nav > li > a:hover {
-  color: #15a9c7;
-}
-.navbar-inverse .navbar-nav > li.active a {
-  color: #15a9c7;
-}
-.navbar-toggler {
-  margin-top: 15px;
-  color: #ffffff;
-  border: 1px solid #333333;
-}
-.navbar-toggler:hover {
-  background: rgba(64, 62, 57, 0.7);
-}
-.contact {
-  background: #78746B;
-  color: #ffffff;
-}
-.padding-contact {
-  padding: 100px 0;
-  font-family: 'Lato', sans-serif;
-}
-.padding-contact h3 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
-  font-weight: 300;
-  padding: 20px 0px 20px 0px;
-  text-transform: uppercase;
-}
-.padding-contact address {
-  font-size: 1.067em;
-  line-height: 24px;
-  font-weight: normal;
-}
-.padding-contact address span {
-  display: block;
-  margin-top: 10px;
-}
-.padding-contact .links {
-  margin: 0;
-  padding: 0;
-}
-.padding-contact .links li {
-  display: block;
-  text-align: left;
-  line-height: 24px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.padding-contact .links li a {
-  text-decoration: none;
-  color: #ffffff;
-  font-weight: normal;
-}
-.padding-contact .links li a:hover {
-  color: #15a9c7;
-}
-.padding-contact .newsletter form {
-  max-width: 190px;
-}
-.padding-contact .newsletter form .btn {
-  width: 100%;
-}
-.padding-contact .newsletter label {
-  margin: 0;
-  font-weight: normal;
-}
-.footer {
-  padding: 0px 20px 50px 20px;
-}
-.footer p {
-  font-size: 0.933em;
-  text-align: center;
-  font-weight: normal;
-}
-.footer p a {
-  color: #ffffff;
-  text-decoration: none;
-}
-.footer p a:hover {
-  color: #15a9c7;
-}
-.btn-default {
-  color: #333333;
-  background-color: #ffffff;
-  border-color: #cccccc;
-}
-.btn-default:hover {
-  background: #cccccc;
-}
-.btn-default-custom {
-  align-content: center;
-  color: #ffffff;
-  font-size: 25px;
-  background-color: #207fbf;
-  border: none;
-  font-weight: 300;
-}
-.btn-default-custom:hover {
-  background-color: #1c70a9;
-  color: #fff;
-}
-.btn-info {
-  background-color: #249be7;
-  border-color: #249be7;
-  color: #ffffff;
-}
-.btn-info:hover {
-  background-color: #188eda;
-}
-.btn-purple {
-  background-color: #791e75;
-  border: 1px solid #791e75;
-  color: #ffffff;
-}
-.btn-purple:hover {
-  background-color: #6b1a67;
-}
-.tooltip-action {
-  color: #207fbf;
-}
-.tooltip-action.ta-white {
-  color: #ffffff;
-}
-.modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.modal .modal-dialog {
-  max-width: 100%;
-  width: 800px;
-  margin: 0 20px;
-}
-.modal .modal-content {
-  border-radius: 0;
-  padding: 5px 20px;
-}
-.modal .modal-header,
-.modal .modal-body,
-.modal .modal-footer {
-  padding-left: 0;
-  padding-right: 0;
-}
-.modal .modal-title {
-  font-size: 2.333em;
-  font-weight: 300;
-  line-height: 1;
-}
-.panel-content {
-  background-color: rgba(64, 62, 57, 0.7);
-  color: #fff;
-  margin-bottom: 0;
-  font-weight: 100;
-  padding: 20px 25px;
-}
-.panel-content hr {
-  border-color: #ffffff;
-}
-.panel-content .panel-header {
-  text-align: center;
-}
-.panel-content .panel-header h4 {
-  font-size: 2.333em;
-  font-weight: 300;
-}
-.panel-content .panel-header strong {
-  font-weight: 700;
-}
-.panel-content .panel-header span,
-.panel-content .panel-header strong {
-  display: inline;
-  font-size: 0.933em;
-}
-.panel-content a {
-  color: #fff;
-}
-.panel-content a:hover {
-  color: #15a9c7;
-}
-.panel-content .panel-body {
-  padding-top: 50px;
-}
-/* App Sections */
-.register-content form {
-  margin-top: 20px;
-}
-.register-content form label {
-  margin-bottom: 2px;
-}
-.register-content form .btn {
-  display: block;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.register-content .sub-header {
-  text-align: center;
-  font-size: 1.200em;
-  font-weight: normal;
-}
-.oauth-wrap {
-  text-align: center;
-  font-weight: normal;
-  padding-top: 30px;
-  padding-bottom: 10px;
-}
-.oauth-wrap h4 {
-  margin-bottom: 10px;
-}
-.oauth-wrap a {
-  font-size: 0.8em;
-  display: inline-block;
-  width: 55px;
-  height: 55px;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  background: #791e75;
-  border-color: #791e75;
-  color: #ffffff;
-  border-radius: 6px;
-}
-.oauth-wrap a:hover {
-  background: #651961;
-  text-decoration: none;
-  color: #ffffff;
-}
-.oauth-wrap a .fa {
-  font-size: 25px;
-}
-.home-wrap {
-  background: url(../images/the-workshop-bgctc7.jpg) no-repeat right center fixed;
-  background-size: cover;
-}
-.touch {
-  text-align: left;
-  background-color: rgba(64, 62, 57, 0.7);
-  color: #ffffff;
-  font-weight: 100;
-  padding: 20px 25px;
-}
-.touch .header .large {
-  font-size: 2.333em;
-}
-.touch .header a {
-  color: #ffffff;
-  text-decoration: underline;
-}
-.touch .add-btn {
-  width: 230px;
-  margin: 20px 10px;
-}
-.touch hr {
-  border-color: #ffffff;
-}
-.touch .toggle-extra a {
-  color: #ffffff;
-}
-.touch .toggle-extra #flip {
-  padding-right: 30px;
-  background-image: url(../images/downarrow.png);
-  background-position: right center;
-  background-repeat: no-repeat;
-  background-size: 15px 10px;
-}
-.touch .toggle-content {
-  display: none;
-  margin-top: 40px;
-}
-.touch .toggle-content .row {
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.touch .toggle-content .row a {
-  color: #ffffff;
-  display: block;
-}
-.touch .toggle-content .row a:hover {
-  color: #ffffff;
-  text-decoration: underline;
-}
-.touch .toggle-content .row .btn {
-  width: 130px;
-  height: 38px;
-}
-.touch .toggle-content .tc-header span {
-  font-weight: 400;
-}
-.touch .toggle-content .tc-header .divider {
-  margin-top: 2px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-.banner-content h1 {
-  background: rgba(64, 62, 57, 0.7);
-  font-size: 2.333em;
-  color: #ffffff;
-  margin: 0 100px 0 0;
-  padding: 20px 25px;
-  font-weight: 300;
-  text-transform: uppercase;
-  line-height: 1.4;
-}
-.banner-content h2,
-.banner-content p {
-  font-size: 1.8em;
-  font-family: 'Lato', sans-serif;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 10px 25px;
-  font-weight: normal;
-  margin: 0;
-  line-height: 1.4;
-}
-.banner-content p {
-  font-size: 1.2em;
-}
-.home-setup {
-  padding: 115px;
-  background: #ffffff;
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-}
-.home-setup h3 {
-  padding: 25px 0;
-  font-size: 38px;
-  font-weight: 800;
-  color: #787878;
-}
-.home-setup h3 span {
-  color: #207fbf;
-}
-.home-setup .setup-inside-block {
-  display: block;
-  border: 1px solid #ffffff;
-  padding: 20px;
-  float: left;
-  width: 100%;
-  min-height: 100%;
-}
-.home-setup .setup-grid {
-  background: #1b8dc3;
-  padding: 50px 0;
-}
-.home-setup h5 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 22px;
-  font-weight: 100;
-  padding: 20px 25px;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.home-setup p {
-  color: #ffffff;
-  padding: 5px 25px;
-  text-align: center;
-  font-size: 16px;
-  margin-top: 10px;
-  line-height: 1.5;
-}
-.edit-sip .modal-body .form-group label {
-  margin-bottom: 5px;
-}
-.edit-sip .modal-footer {
-  border: none;
-  text-align: center;
-  padding-top: 0;
-}
-.edit-sip .modal-footer .btn {
-  width: 100%;
-  max-width: 230px;
-  margin: 0 10px 20px;
-}
-.button-page .form-group label {
-  margin-bottom: 2px;
-  display: block;
-}
-.button-page .form-group.inline-btn button {
-  margin-right: 10px;
-}
-.button-page .form-header {
-  display: block;
-  margin-top: 35px;
-  margin-bottom: 10px;
-  padding-bottom: 2px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-.button-page .expand-block {
-  padding: 0.5rem 0;
-  margin: 15px 0;
-  border-radius: 0.25rem;
-  background: #ffffff;
-  color: #55595c;
-}
-.button-page .expand-block .head {
-  line-height: 1.25;
-  display: block;
-  padding: 0 0.75rem 2px;
-  color: #791e75;
-}
-.button-page .expand-block .form-group {
-  display: none;
-  margin: 0 0.75rem 5px;
-}
-.button-page .expand-block .form-group input[type="radio"],
-.button-page .expand-block .form-group input[type="checkbox"] {
-  margin-right: 5px;
-}
-.button-page .expand-block.open-block .form-group {
-  display: block;
-}
-.button-page .expand-block.open-block .head {
-  margin-bottom: 10px;
-  padding-bottom: 8px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.15);
-}
-/* Widget Style */
-/* Responsive Style */
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i';@import 'https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i';@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';@import "less_ui/plugins/bootstrap-flex.css";@import "widget.css";.text-center{text-align:center}.text-right{text-align:right}.text-left{text-align:left}html,body{min-height:100vh;font-family:'Open Sans',sans-serif;font-size:15px;font-weight:300;color:#55595c}.container{width:100%}.site-wrapper{background-color:#207fbf}.site-wrapper-inner{display:flex;align-items:center;justify-content:center;width:100%;min-height:100vh;padding-top:150px;padding-bottom:50px}.navbar-inverse{background:rgba(64,62,57,0.7);border-bottom:1px solid #080808;padding-top:15px;padding-bottom:15px}.navbar-inverse .navbar-nav>li>a{color:#ffffff;font-size:18px;line-height:56px;text-decoration:none;font-weight:normal}.navbar-inverse .navbar-nav>li>a:hover{color:#15a9c7}.navbar-inverse .navbar-nav>li.active a{color:#15a9c7}.navbar-toggler{margin-top:15px;color:#ffffff;border:1px solid #333333}.navbar-toggler:hover{background:rgba(64,62,57,0.7)}.contact{background:#78746B;color:#ffffff}.padding-contact{padding:100px 0;font-family:'Lato',sans-serif}.padding-contact h3{font-family:'Open Sans',sans-serif;font-size:24px;font-weight:300;padding:20px 0 20px 0;text-transform:uppercase}.padding-contact address{font-size:1.067em;line-height:24px;font-weight:normal}.padding-contact address span{display:block;margin-top:10px}.padding-contact .links{margin:0;padding:0}.padding-contact .links li{display:block;text-align:left;line-height:24px;list-style-type:none;padding:0;margin:0}.padding-contact .links li a{text-decoration:none;color:#ffffff;font-weight:normal}.padding-contact .links li a:hover{color:#15a9c7}.padding-contact .newsletter form{max-width:190px}.padding-contact .newsletter form .btn{width:100%}.padding-contact .newsletter label{margin:0;font-weight:normal}.footer{padding:0 20px 50px 20px}.footer p{font-size:.933em;text-align:center;font-weight:normal}.footer p a{color:#ffffff;text-decoration:none}.footer p a:hover{color:#15a9c7}.btn-default{color:#333333;background-color:#ffffff;border-color:#cccccc}.btn-default:hover{background:#cccccc}.btn-default-custom{align-content:center;color:#ffffff;font-size:25px;background-color:#207fbf;border:none;font-weight:300}.btn-default-custom:hover{background-color:#1c70a9;color:#fff}.btn-info{background-color:#249be7;border-color:#249be7;color:#ffffff}.btn-info:hover{background-color:#188eda}.btn-purple{background-color:#791e75;border:1px solid #791e75;color:#ffffff}.btn-purple:hover{background-color:#6b1a67}.tooltip-action{color:#207fbf}.tooltip-action.ta-white{color:#ffffff}.modal{display:flex;justify-content:center;align-items:center}.modal .modal-dialog{max-width:100%;width:800px;margin:0 20px}.modal .modal-content{border-radius:0;padding:5px 20px}.modal .modal-header,.modal .modal-body,.modal .modal-footer{padding-left:0;padding-right:0}.modal .modal-title{font-size:2.333em;font-weight:300;line-height:1}.panel-content{background-color:rgba(64,62,57,0.7);color:#fff;margin-bottom:0;font-weight:100;padding:20px 25px}.panel-content hr{border-color:#ffffff}.panel-content .panel-header{text-align:center}.panel-content .panel-header h4{font-size:2.333em;font-weight:300}.panel-content .panel-header strong{font-weight:700}.panel-content .panel-header span,.panel-content .panel-header strong{display:inline;font-size:.933em}.panel-content a{color:#fff}.panel-content a:hover{color:#15a9c7}.panel-content .panel-body{padding-top:50px}.register-content form{margin-top:20px}.register-content form label{margin-bottom:2px}.register-content form .btn{display:block;margin-top:30px;margin-bottom:30px}.register-content .sub-header{text-align:center;font-size:1.2em;font-weight:normal}.oauth-wrap{text-align:center;font-weight:normal;padding-top:30px;padding-bottom:10px}.oauth-wrap h4{margin-bottom:10px}.oauth-wrap a{font-size:.8em;display:inline-block;width:55px;height:55px;text-align:center;white-space:nowrap;vertical-align:middle;padding-top:9px;padding-bottom:9px;background:#791e75;border-color:#791e75;color:#ffffff;border-radius:6px}.oauth-wrap a:hover{background:#651961;text-decoration:none;color:#ffffff}.oauth-wrap a .fa{font-size:25px}.home-wrap{background:url(../images/the-workshop-bgctc7.jpg) no-repeat right center fixed;background-size:cover}.touch{text-align:left;background-color:rgba(64,62,57,0.7);color:#ffffff;font-weight:100;padding:20px 25px}.touch .header .large{font-size:2.333em}.touch .header a{color:#ffffff;text-decoration:underline}.touch .add-btn{width:230px;margin:20px 10px}.touch hr{border-color:#ffffff}.touch .toggle-extra a{color:#ffffff}.touch .toggle-extra #flip{padding-right:30px;background-image:url(../images/downarrow.png);background-position:right center;background-repeat:no-repeat;background-size:15px 10px}.touch .toggle-content{display:none;margin-top:40px}.touch .toggle-content .row{justify-content:center;align-items:center;margin-bottom:10px}.touch .toggle-content .row a{color:#ffffff;display:block}.touch .toggle-content .row a:hover{color:#ffffff;text-decoration:underline}.touch .toggle-content .row .btn{width:130px;height:38px}.touch .toggle-content .tc-header span{font-weight:400}.touch .toggle-content .tc-header .divider{margin-top:2px;margin-bottom:15px;border-bottom:1px solid rgba(255,255,255,0.2)}.banner-content h1{background:rgba(64,62,57,0.7);font-size:2.333em;color:#ffffff;margin:0 100px 0 0;padding:20px 25px;font-weight:300;text-transform:uppercase;line-height:1.4}.banner-content h2,.banner-content p{font-size:1.8em;font-family:'Lato',sans-serif;background:rgba(255,255,255,0.8);padding:10px 25px;font-weight:normal;margin:0;line-height:1.4}.banner-content p{font-size:1.2em}.home-setup{padding:115px;background:#ffffff;font-family:'Lato',sans-serif;text-align:center}.home-setup h3{padding:25px 0;font-size:38px;font-weight:800;color:#787878}.home-setup h3 span{color:#207fbf}.home-setup .setup-inside-block{display:block;border:1px solid #ffffff;padding:20px;float:left;width:100%;min-height:100%}.home-setup .setup-grid{background:#1b8dc3;padding:50px 0}.home-setup h5{font-family:'Open Sans',sans-serif;font-size:22px;font-weight:100;padding:20px 25px;text-transform:uppercase;color:#ffffff}.home-setup p{color:#ffffff;padding:5px 25px;text-align:center;font-size:16px;margin-top:10px;line-height:1.5}.edit-sip .modal-body .form-group label{margin-bottom:5px}.edit-sip .modal-footer{border:none;text-align:center;padding-top:0}.edit-sip .modal-footer .btn{width:100%;max-width:230px;margin:0 10px 20px}.button-page .form-group label{margin-bottom:2px;display:block}.button-page .form-group.inline-btn button{margin-right:10px}.button-page .form-header{display:block;margin-top:35px;margin-bottom:10px;padding-bottom:2px;border-bottom:1px solid rgba(255,255,255,0.2)}.button-page .expand-block{padding:.5rem 0;margin:15px 0;border-radius:.25rem;background:#ffffff;color:#55595c}.button-page .expand-block .head{line-height:1.25;display:block;padding:0 .75rem 2px;color:#791e75}.button-page .expand-block .form-group{display:none;margin:0 .75rem 5px}.button-page .expand-block .form-group input[type="radio"],.button-page .expand-block .form-group input[type="checkbox"]{margin-right:5px}.button-page .expand-block.open-block .form-group{display:block}.button-page .expand-block.open-block .head{margin-bottom:10px;padding-bottom:8px;border-bottom:2px solid rgba(0,0,0,0.15)}
